# eodhdc

./: .editorconfig  .gitignore  .pylintrc  .readthedocs.yaml  LICENSE  README.md  environment.yml  playground.py  pyproject.toml  release.sh  tox.ini
docs/source/: conf.py  eodhdc.clients.rst  eodhdc.groups.coro.rst  eodhdc.groups.rst  eodhdc.groups.sync.rst  eodhdc.rst  index.rst  modules.rst
eodhdc/: __init__.py  base.py  eodhdc.py  eodhdws.py  exceptions.py
eodhdc/clients/: aiohttp.py  httpxa.py  httpxs.py  requests.py
eodhdc/groups/: __init__.py
eodhdc/groups/coro/: __init__.py  alternative.py  exchange.py  fundamental.py  market.py
eodhdc/groups/sync/: __init__.py  alternative.py  exchange.py  fundamental.py  market.py
reports/: coverage.xml  pylint.sh  pytest-py310.xml  pytest-py311.xml  pytest-py37.xml  pytest-py38.xml  pytest-py39.xml
tests/: test_clients.py  test_clients_async.py  test_eodhdc.py  test_eodhdws.py  test_groups_alternative.py  test_groups_base.py  test_groups_exchange.py  test_groups_fundamental.py  test_groups_market.py  wss.py
tests/cassettes/test_clients/: test_requests_exceptions[case10].yaml  test_requests_exceptions[case11].yaml  test_requests_exceptions[case3].yaml  test_requests_exceptions[case4].yaml  test_requests_exceptions[case5].yaml  test_requests_exceptions[case9].yaml  test_response_csv[httpxs].yaml  test_response_csv[requests].yaml  test_response_json[httpxs].yaml  test_response_json[requests].yaml
tests/cassettes/test_clients_async/: test_requests_exceptions[case10].yaml  test_requests_exceptions[case11].yaml  test_requests_exceptions[case3].yaml  test_requests_exceptions[case4].yaml  test_requests_exceptions[case5].yaml  test_requests_exceptions[case9].yaml  test_response_csv[aiohttp].yaml  test_response_csv[httpxa].yaml  test_response_json[aiohttp].yaml  (+1 more)
(+80 files in other folders)
