[tool.poetry]
name = "EODHDC"
version = "0.9.1"
description = "EOD Historical Data API Python Client"
authors = ["Warg <warg.silencer@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/wargx/eodhdc"
repository = "https://github.com/wargx/eodhdc"
keywords = [
    "eod", "eodhd","financial", "historical", "economic", "data",
    "api",  "fundamental", "alternative", "insider", "real-time",
    "exchanges", "capitalization", "bulk", "intraday", "options"
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 5 - Production/Stable"
]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.7.16"
requests = "^2.28.2"
websockets = "^10.4"
pandas = "^1.3"
httpx = { version = "^0.23.3", optional = true }
aiohttp = { version = "^3.8.3", optional = true }

[tool.poetry.extras]
httpx = ["httpx"]
aiohttp = ["aiohttp"]

[tool.poetry.group.dev.dependencies]
tox = "^4.4.2"
pytest = "^7.2.1"
vcrpy = "^4.2.1"
pytest-vcr = "^1.0.2"
pytest-asyncio = "^0.20.3"
pylint = "^2.15.10"
coverage = "^7.1.0"
sphinx = "5.3.0"
sphinx-rtd-theme = "^1.1.1"
myst-parser = "^0.18.1"

[tool.pytest.ini_options]
markers = [
    "eodhdc: mark eodhdc tests",
    "eodhdws: mark eodhdws tests",
    "clients: mark clients tests",
    "groups: mark groups tests"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
